--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,10 @@ on:
     # Run every week at 20:00 on Sunday
     - cron: "0 20 * * 0"
 
+env:
+  LOCAL_IMAGE: roscon_delib_ws_2024:main
+  REGISTRY_IMAGE: ghcr.io/roscon_delib_ws_2024/base
+
 jobs:
   build:
     name: Build and push docker
@@ -26,5 +30,7 @@ jobs:
       - name: Push to gh package
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker tag base ghcr.io/roscon_delib_ws_2024/base:latest
-          docker push ghcr.io/roscon_delib_ws_2024/base:latest
+          docker tag ${{ env.LOCAL_IMAGE }} ${{ env.REGISTRY_IMAGE }}:${{ github.sha }}
+          docker push ${{ env.REGISTRY_IMAGE }}:${{ github.sha }}
+          docker tag ${{ env.LOCAL_IMAGE }} ${{ env.REGISTRY_IMAGE }}:latest
+          docker push ${{ env.REGISTRY_IMAGE }}:latest
