--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   LOCAL_IMAGE: roscon_delib_ws_2024:main
-  REGISTRY_IMAGE: ghcr.io/roscon_delib_ws_2024/base
+  REGISTRY_IMAGE: ghcr.io/${{ github.repository_owner }}/base
 
 jobs:
   build:
