--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           compose-file: ./docker-compose.yaml
           services: base
+      - name: Verifying the container was built
+        run: docker exec roscon24-workshop-base-1 colcon test
       - name: Push to gh package
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
