--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,7 @@ on:
 env:
   LOCAL_IMAGE: roscon_delib_ws_2024:main
   REGISTRY_IMAGE: ghcr.io/${{ github.repository_owner }}/roscon_delib_ws_2024
+  RAW_BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 jobs:
   build:
     name: Build and push docker
@@ -39,8 +40,9 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
           docker tag ${{ env.LOCAL_IMAGE }} ${{ env.REGISTRY_IMAGE }}:${{ github.sha }}
           docker push ${{ env.REGISTRY_IMAGE }}:${{ github.sha }}
-          docker tag ${{ env.LOCAL_IMAGE }} ${{ env.REGISTRY_IMAGE }}:${{ github.ref }}
-          docker push ${{ env.REGISTRY_IMAGE }}:${{ github.ref }}
+          export BRANCH_NAME=$(echo ${{ env.RAW_BRANCH_NAME }} | sed 's/\//-/g')
+          docker tag ${{ env.LOCAL_IMAGE }} ${{ env.REGISTRY_IMAGE }}:$BRANCH_NAME
+          docker push ${{ env.REGISTRY_IMAGE }}:$BRANCH_NAME
       - name: Push to gh registry with latest if this is main
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
