--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -41,9 +41,7 @@ RUN curl -O -L https://github.com/convince-project/smc_storm/releases/download/0
     ln -s /delib_ws/bin/smc_storm /usr/local/bin/smc_storm
 # (AS2FM)
 RUN cd src/dependencies/convince/AS2FM && \
-    pip3 install --break-system-packages as2fm_common/. && \
-    pip3 install --break-system-packages jani_generator/. && \
-    pip3 install --break-system-packages scxml_converter/. && \
+    pip3 install --break-system-packages . && \
     pip3 uninstall -y --break-system-packages js2py && \
     pip3 install --break-system-packages git+https://github.com/felixonmars/Js2Py.git@py3.12  # Temporary fix for js2py && \
     pip3 uninstall -y --break-system-packages matplotlib  # Temporary fix for MatPlotLib conflict
