seting cwd for compose
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,7 @@ jobs:
           compose-file: ./docker-compose.yaml
           services: base
           up-flags: --build
+          cwd: /roscon24-workshop
       # - name: Verifying the container was built
       #   run: docker exec roscon24-workshop-base-1 colcon test
       - name: Test pyrobosim
