--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
           compose-file: ./docker-compose.yaml
           services: base
           up-flags: --build
-          cwd: $GITHUB_WORKSPACE
+          cwd: ${{ github.workspace }}
       # - name: Verifying the container was built
       #   run: docker exec roscon24-workshop-base-1 colcon test
       - name: Test pyrobosim
