--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,16 +29,9 @@ jobs:
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ./docker-compose.yaml
-          services: base
+          services: test
           up-flags: --build
           cwd: ${{ github.workspace }}
-      # - name: Verifying the container was built
-      #   run: docker exec roscon24-workshop-base-1 colcon test
-      # TODO: We only really want to run test on our problems. I need to write some ...
-      - name: Test pyrobosim
-        run: |
-          docker exec roscon24-workshop-base-1 bash -c "source /opt/ros/jazzy/setup.bash && colcon build"
-          docker exec roscon24-workshop-base-1 bash -c "source /delib_ws/install/setup.bash && pytest /delib_ws/src/dependencies/pyrobosim/pyrobosim/test/core"
       - name: Push to gh registry with sha and branch name
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
