--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,13 +25,12 @@ jobs:
         run: |
           docker pull ${{ env.REGISTRY_IMAGE }}:latest
         continue-on-error: true
-      - name: Build and start docker
-        uses: hoverkraft-tech/compose-action@v2.0.1
-        with:
-          compose-file: ./docker-compose.yaml
-          services: test
-          up-flags: --build
-          cwd: ${{ github.workspace }}
+      - name: Build Docker image
+        run: |
+          docker compose build
+      - name: Run tests
+        run: |
+          docker compose up test
       - name: Push to gh registry with sha and branch name
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
