--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,15 +25,12 @@ jobs:
         run: |
           docker pull ${{ env.REGISTRY_IMAGE }}:latest
         continue-on-error: true
-      - name: Build and start docker
-        uses: hoverkraft-tech/compose-action@v2.0.1
-        with:
-          compose-file: ./docker-compose.yaml
-          services: base
-          up-flags: --build
-      # - name: Verifying the container was built
-      #   run: docker exec roscon24-workshop-base-1 colcon test
-      # TODO: We only really want to run test on our problems. I need to write some ...
+      - name: Build Docker image
+        run: |
+          docker compose build
+      - name: Build ROS workspace and run tests
+        run: |
+          docker compose run build_and_test
       - name: Push to gh registry with sha and branch name
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
