Finalizing changes in BT.CPP

--- a/technologies/BehaviorTree.CPP/pyrobosim_btcpp/CMakeLists.txt
+++ b/technologies/BehaviorTree.CPP/pyrobosim_btcpp/CMakeLists.txt
@@ -38,7 +38,15 @@ install(
 
 install(
   TARGETS btcpp_executor
-  DESTINATION DESTINATION lib/${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME}
 )
+
+install(
+  DIRECTORY include/
+  DESTINATION include/
+)
+
+ament_export_dependencies(${THIS_PACKAGE_DEPS})
+ament_export_include_directories(include)
 
 ament_package()
