also setting tag of release
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -60,3 +60,4 @@ jobs:
           commit: ${{ github.sha }}
           allowUpdates: true
           name: ${{ env.TAG_NAME }}
+          tag: ${{ env.TAG_NAME }}
