only main builds are latest
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -61,3 +61,4 @@ jobs:
           allowUpdates: true
           name: ${{ env.TAG_NAME }}
           tag: ${{ env.TAG_NAME }}
+          makeLatest: ${{ github.ref == 'refs/heads/main' }}
