also this branches image for caching
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,9 +21,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Pull image for caching
+      - name: Pull latest image for caching
         run: |
           docker pull ${{ env.REGISTRY_IMAGE }}:latest
+        continue-on-error: true
+      - name: Also pull this branch's image for caching
+        run: |
+          export BRANCH_NAME=$(echo ${{ env.RAW_BRANCH_NAME }} | sed 's/\//-/g')
+          docker pull ${{ env.REGISTRY_IMAGE }}:$BRANCH_NAME
         continue-on-error: true
       - name: Build Docker image
         run: |
