Last steps convince (#60)
---------

Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,6 +36,15 @@ jobs:
       - name: Build ROS workspace and run tests
         run: |
           docker compose run build_and_test
+      - name: Convince tests
+        run: |
+          docker compose run build_and_test diff -r \
+            src/dependencies/convince/AS2FM/test/jani_generator/_test_data/ros_example/ \
+            src/technologies/convince/task_1_solution/
+          docker compose run build_and_test diff -r \
+            src/dependencies/convince/AS2FM/test/jani_generator/_test_data/ros_example_w_bt/ \
+            src/technologies/convince/task_2_solution/
+          docker compose run build_and_test bash -c "source /delib_ws/install/setup.bash && pytest /delib_ws/src/dependencies/convince/AS2FM/test"
       - name: Push to gh registry with sha and branch name
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
