--- a/technologies/ros_bt_py/ros_bt_py_pyrobosim/trees/pick_up.yaml
+++ b/technologies/ros_bt_py/ros_bt_py_pyrobosim/trees/pick_up.yaml
@@ -1,6 +1,6 @@
 name: pick_up.yaml
 path: ''
-root_name: .TempPickUpSequence
+root_name: PickUpSequence
 nodes:
   - module: ros_bt_py.nodes.sequence
     node_class: MemorySequence
@@ -12,9 +12,7 @@ nodes:
       - EnumExeuctionResult
       - PickUpRequest
       - SetAttr_2
-      - PickUpObject
-      - PickUpResult
-      - PickUpSuccessfull?
+      - Retry
     options: []
     inputs: []
     outputs: []
@@ -127,6 +125,33 @@ nodes:
       - key: new_object
         serialized_value: 'null'
         serialized_type: '{"py/type": "pyrobosim_msgs.msg._task_action.TaskAction"}'
+    state: SHUTDOWN
+  - module: ros_bt_py.nodes.decorators
+    node_class: Retry
+    version: 0.1.0
+    max_children: 1
+    name: Retry
+    child_names:
+      - Sequence
+    options:
+      - key: num_retries
+        serialized_value: '10'
+        serialized_type: '{"py/type": "builtins.int"}'
+    inputs: []
+    outputs: []
+    state: SHUTDOWN
+  - module: ros_bt_py.nodes.sequence
+    node_class: Sequence
+    version: 0.1.0
+    max_children: -1
+    name: Sequence
+    child_names:
+      - PickUpObject
+      - PickUpResult
+      - PickUpSuccessfull?
+    options: []
+    inputs: []
+    outputs: []
     state: SHUTDOWN
   - module: ros_bt_py.ros_nodes.action
     node_class: Action
