--- a/problems/delib_ws_worlds/worlds/location_data.yaml
+++ b/problems/delib_ws_worlds/worlds/location_data.yaml
@@ -8,10 +8,25 @@ table:
     dims: [1.2, 0.8]
     height: 0.5
   nav_poses:
-    - [0, 0.65, -1.57]  # above
-    - [0, -0.65, 1.57]  # below
-    - [-0.85, 0, 0.0]  # left
-    - [0.85, 0, 3.14]  # right
+    nav_poses:
+      - position:  # above
+          x: 0.0
+          y: 0.65
+        rotation_eul:
+          yaw: -1.57
+      - position:  # below
+          x: 0.0
+          y: -0.65
+        rotation_eul:
+          yaw: 1.57
+      - position:  # left
+          x: -0.85
+          y: 0.0
+      - position:  # right
+          x: 0.85
+          y: 0.0
+        rotation_eul:
+          yaw: 3.14
   locations:
     - name: "tabletop"
       footprint:
@@ -25,8 +40,14 @@ desk:
     dims: [0.6, 1.2]
     height: 0.5
   nav_poses:
-    - [-0.5, 0, 0.0]  # left
-    - [0.5, 0, 3.14]  # right
+    - position:  # left
+        x: -0.5
+        y: 0.0
+    - position:  # right
+        x: 0.5
+        y: 0.0
+      rotation_eul:
+        yaw: 3.14
   locations:
     - name: "desktop"
       footprint:
@@ -40,8 +61,16 @@ storage:
     dims: [1.0, 0.6]
     height: 0.5
   nav_poses:
-    - [0, 0.55, -1.57]  # above
-    - [0, -0.55, 1.57]  # below
+    - position:  # above
+        x: 0.0
+        y: 0.5
+      rotation_eul:
+        yaw: -1.57
+    - position:  # below
+        x: 0.0
+        y: -0.5
+      rotation_eul:
+        yaw: 1.57
   locations:
     - name: "storage"
       footprint:
@@ -55,10 +84,24 @@ trashcan_small:
     radius: 0.25
     height: 0.5
   nav_poses:
-    - [0, 0.5, -1.57]  # above
-    - [0, -0.5, 1.57]  # below
-    - [-0.5, 0, 0.0]  # left
-    - [0.5, 0, 3.14]  # right
+      - position:  # above
+          x: 0.0
+          y: 0.5
+        rotation_eul:
+          yaw: -1.57
+      - position:  # below
+          x: 0.0
+          y: -0.5
+        rotation_eul:
+          yaw: 1.57
+      - position:  # left
+          x: -0.5
+          y: 0.0
+      - position:  # right
+          x: 0.5
+          y: 0.0
+        rotation_eul:
+          yaw: 3.14
   locations:
     - name: "disposal"
       footprint:
@@ -72,10 +115,24 @@ trashcan_large:
     radius: 0.525
     height: 0.5
   nav_poses:
-    - [0, 0.75, -1.57]  # above
-    - [0, -0.75, 1.57]  # below
-    - [-0.75, 0, 0.0]  # left
-    - [0.75, 0, 3.14]  # right
+      - position:  # above
+          x: 0.0
+          y: 0.75
+        rotation_eul:
+          yaw: -1.57
+      - position:  # below
+          x: 0.0
+          y: -0.75
+        rotation_eul:
+          yaw: 1.57
+      - position:  # left
+          x: -0.75
+          y: 0.0
+      - position:  # right
+          x: 0.75
+          y: 0.0
+        rotation_eul:
+          yaw: 3.14
   locations:
     - name: "disposal"
       footprint:
@@ -97,8 +154,22 @@ charger:
       footprint:
         type: parent
       nav_poses:
-        - [0, -0.4, 1.57]
-        - [-0.7, 0, 0]
-        - [0, 0.4, -1.57]
-        - [0.7, 0, 3.14]
+      - position:  # above
+          x: 0.0
+          y: 0.4
+        rotation_eul:
+          yaw: -1.57
+      - position:  # below
+          x: 0.0
+          y: -0.4
+        rotation_eul:
+          yaw: 1.57
+      - position:  # left
+          x: -0.7
+          y: 0.0
+      - position:  # right
+          x: 0.7
+          y: 0.0
+        rotation_eul:
+          yaw: 3.14
   color: [0.4, 0.4, 0]
