--- a/problems/delib_ws_worlds/worlds/world2.yaml
+++ b/problems/delib_ws_worlds/worlds/world2.yaml
@@ -33,10 +33,24 @@ rooms:
         - [-1.6, 1.0]
     # Add navigation poses since the centroid is blocked by the table.
     nav_poses:
-      - [-1.0, 0.0, 0.0, 0.0]  # left
-      - [1.0, 0.0, 0.0, 3.14]  # right
-      - [0.0, 0.8, 0.0, -1.57]  # above
-      - [0.0, -0.8, 0.0, 1.57]  # below
+      - position:  # left
+          x: -1.0
+          y: 0.0
+      - position:  # right
+          x: 1.0
+          y: 0.0
+        rotation_eul:
+          yaw: 3.14
+      - position:  # above
+          x: 0.0
+          y: 0.8
+        rotation_eul:
+          yaw: -1.57
+      - position:  # below
+          x: 0.0
+          y: -0.8
+        rotation_eul:
+          yaw: 1.57
     wall_width: 0.2
     color: [0, 1, 0]
 
