--- a/problems/delib_ws_worlds/worlds/world2.yaml
+++ b/problems/delib_ws_worlds/worlds/world2.yaml
@@ -183,41 +183,66 @@ locations:
     - name: table
       parent: dining
       category: table
-      pose: [0.0, 0.15]
+      pose:
+        position:
+          x: 0.0
+          y: 0.15
 
     - name: desk
       parent: office
       category: desk
-      pose: [3.6, -2.3]
+      pose:
+        position:
+          x: 3.6
+          y: -2.3
 
     - name: fridge
       parent: kitchen
       category: storage
-      pose: [-3, -2.65]
+      pose:
+        position:
+          x: -3.0
+          y: -2.65
       is_open: false
 
     - name: pantry
       parent: kitchen
       category: storage
-      pose: [-3.65, -1.5, 0.0, 1.57]
+      pose:
+        position:
+          x: -3.65
+          y: -1.5
+        rotation_eul:
+          yaw: 1.57
       is_open: true
 
     - name: bin
       parent: office
       category: trashcan_small
-      pose: [2.6, -0.85]
+      pose:
+        position:
+          x: 2.6
+          y: -0.85
       is_open: true
 
     - name: dumpster
       parent: trash
       category: trashcan_large
-      pose: [-3.4, 2.4]
+      pose:
+        position:
+          x: -3.4
+          y: 2.4
       is_open: false
 
     - name: charger
       parent: closet
       category: charger
-      pose: [3.5, 2.5, 0, -0.785]
+      pose:
+        position:
+          x: 3.5
+          y: 2.5
+        rotation_eul:
+          yaw: -0.785
       is_charger: true
 
 objects:
