Install example_interfaces in Dockerfile

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && \
     libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev \
     libnss3 libasound2t64 libxkbfile1 \
     python3-pip python3-tk python3-wrapt python3-inflection \
-    ros-jazzy-rqt-service-caller
+    ros-jazzy-example-interfaces ros-jazzy-rqt-service-caller
 
 # Create a ROS 2 workspace.
 RUN mkdir -p /delib_ws/src/
